affichage des abilities

--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,12 @@ body #container {
     #imageWrapper {
         width: 250px;
         z-index: 10;
+        /* opacity: 20%; */
 
-        &:hover {
+        /* &:hover {
             transform: translate(-60%, -60%);
 
-        }
+        } */
 
         & img {
             width: 100%;
@@ -118,7 +119,7 @@ body #btn {
 
 #abilities {
     /* transform: translateY(-100%); */
-    display: none;
+    /* display: none; */
     position: absolute;
     top: 50%;
     left: 50%;
