--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,9 @@ body #change-artwork {
 body #container {
     position: relative;
     background-color: #ffffff41;
-    width: 60%;
+    width: 100%;
     max-width: 400px;
+    min-height: 400px;
     max-height: 400px;
     border-radius: 20px;
     box-shadow: 6px 5px 6px #0000007e;
@@ -118,17 +119,19 @@ body #btn {
 } */
 
 #abilities {
-    /* transform: translateY(-100%); */
-    /* display: none; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: clamp(1.2rem, 2.5vw, 2rem);
-
-
-
 }
 .translate{
     transform: translate(-60%, -60%);
+    transition: .8s ease;
+}
+
+.dispNone{
+    display: none;
+    transition: 1s ease-in-out;
+
 }
