--- a/css/style.css
+++ b/css/style.css
@@ -71,13 +71,14 @@ body #container {
         width: 250px;
         z-index: 10;
 
-        &:hover {
-            transform: translate(-60%, -60%);
+        /* &:hover {
+            transform: translate(-50%);
 
-        }
+        } */
 
         & img {
-            width: 100%;
+            /* width: 100% */
+            max-width: 250px;
         }
 
     }
@@ -94,6 +95,7 @@ body #container {
 
     }
 }
+
 
 body #btn {
     border: 2px solid #2f55a8;
